--- a/install.txt
+++ b/install.txt
@@ -5,8 +5,16 @@ Install:
 Upload the contents of the 'upload' folder, leaving the folder structure intact.
 Import the file inside the 'import' folder through AdminCP > Plugins & Products > Manage Products > Add/Import Product
 
-Copy this to the bottom of your headinclude template:
-<script src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+Manual File Updates:
+Step 1: Copy this to the bottom of your headinclude template:
+
+	<script src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+Step 2: in /clientscripts/ckeditor/ckeditor.js line 134 change:
+	
+	for(command in y)q.getCommand(y[command]).setState(2);
+	to
+	for(command in y){if(!typeof y[command] === "undefined"){q.getCommand(y[command]).setState(2);}}
 
 Usage:
 [tweet]twitter id here[/tweet]
